--- a/app/blog-story.html
+++ b/app/blog-story.html
@@ -460,8 +460,8 @@
                     Written by Abiola Akinwoleola
                 </p>
                 </div>
-                <div>
-                    <img src="assets/images/blog-story1.png" alt="">
+                <div class="blog__story--img">
+                    <img src="assets/images/blog-story3.png" alt="">
                 </div>
                 <div class="blog__story--container">
                     <p>
@@ -539,7 +539,7 @@
     </section>
 
     <section>
-        <div>
+        <!-- <div>
             <div class="blog__story">
                 <h3 class="blog__story--italics">
                 Is Digital Transformation the next step for you?
@@ -667,6 +667,20 @@
                 <img src="assets/images/whatsapp-gradient.png" alt="">
                 </a>
             </div>
+        </div> -->
+        <div class="blog__story--socials">
+            <span>
+            Share on
+            </span>
+            <a  target="_blank" href="https://twitter.com/KJKAfrica?s=09">
+            <img src="assets/images/twitter-gradient.png" alt="">
+            </a>
+            <a class="facebook" target="_blank" href="https://www.facebook.com/kjkafrica">
+            <img src="assets/images/facebook-gradient.png" alt="">
+            </a>
+            <a target="_blank" href="https://wa.me/2348126261152?text=Welcome%20to%20KJK%20Africa%0A">
+            <img src="assets/images/whatsapp-gradient.png" alt="">
+            </a>
         </div>
     </section>
 
