--- a/app/team.html
+++ b/app/team.html
@@ -1073,6 +1073,28 @@
                                 <span>Product Design Lead</span>
                             </div>
                         </div>
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/ayo.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second"> Ayomide Solomon </h3>
+                                <span>Finance Manager</span>
+                            </div>
+                        </div>
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/yinka.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second"> Yinka Otitoju </h3>
+                                <span>Geek's Capital Manager</span>
+                            </div>
+                        </div>
 
                         <div class="team__item">
                             <div style="position: relative;">
@@ -1104,44 +1126,66 @@
                                 </div>
                             </div>
                             <div class="team__label">
-                                <h3 class="title__second">CEO</h3>
-                                <span>Jumoke Oduwole</span>
+                                <h3 class="title__second">Damilola Omolaye</h3>
+                                <span>GC's Desk Jockey</span>
                             </div>
                         </div>
 
                         <div class="team__item">
                             <div style="position: relative;">
                                 <div class="team__avatar-wrapper">
-                                    <img src="assets/images/t6.png" alt="">
+                                    <img src="assets/images/basit.png" alt="">
                                 </div>
                             </div>
                             <div class="team__label">
-                                <h3 class="title__second">CEO</h3>
-                                <span>Jumoke Oduwole</span>
+                                <h3 class="title__second">Basit Sijuola</h3>
+                                <span>GC's Male Assistant</span>
                             </div>
                         </div>
 
                         <div class="team__item">
                             <div style="position: relative;">
                                 <div class="team__avatar-wrapper">
-                                    <img src="assets/images/t7.png" alt="">
+                                    <img src="assets/images/ijeoma.png" alt="">
                                 </div>
                             </div>
                             <div class="team__label">
-                                <h3 class="title__second">CEO</h3>
-                                <span>Jumoke Oduwole</span>
+                                <h3 class="title__second">Ijeoma Igboamaeze</h3>
+                                <span>GC's CEO Assistant</span>
                             </div>
                         </div>
 
                         <div class="team__item">
                             <div style="position: relative;">
                                 <div class="team__avatar-wrapper">
-                                    <img src="assets/images/t8.png" alt="">
+                                    <img src="assets/images/bose3.png" alt="">
                                 </div>
                             </div>
                             <div class="team__label">
-                                <h3 class="title__second">CEO</h3>
-                                <span>Jumoke Oduwole</span>
+                                <h3 class="title__second">Bose Ebudiola</h3>
+                                <span>GC's Female Assistant</span>
+                            </div>
+                        </div>
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <!-- <img src="assets/images/bose3.png" alt=""> -->
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <!-- <h3 class="title__second">Bose Ebudiola</h3>
+                                <span>GC's Female Assistant</span> -->
+                            </div>
+                        </div>
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <!-- <img src="assets/images/bose3.png" alt=""> -->
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <!-- <h3 class="title__second">Bose Ebudiola</h3>
+                                <span>GC's Female Assistant</span> -->
                             </div>
                         </div>
 
