--- a/app/touch.html
+++ b/app/touch.html
@@ -48,8 +48,8 @@
     top: 0;
     bottom: 0;
     right: 0;
-    min-width: 100%;
-    min-height: 100vh;
+    /* width: 100%; */
+    /* height: 100vh; */
             z-index: -1;
         }
         .header__container {
@@ -718,11 +718,13 @@
                 <img src="assets/images/play.png " class="btn__img btn__img--header " alt=" "> TELL US ABOUT YOUR PROJECT
             </a>
         </div>
-        <video autoplay muted loop id="myvideo">
-            <source src="assets/images/VID-20200418-WA0003.mp4">
-        </video>
+        
     </div>
-
+    <div>
+    <video autoplay muted loop id="myvideo">
+        <source src="assets/images/VID-20200418-WA0003.mp4">
+    </video>
+    </div>
     <img src="assets/images/kjk-history-map.png " class="header__map ">
 
 </header>
