--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -46,6 +46,17 @@ gtag('config', 'UA-159861942-1');
             width: 100%;
             /* height: 300px; */
         }
+
+        @media only screen and (max-width:1110px){
+            .swiper-container {
+                height: 546px;
+            }
+        }
+        @media only screen and (max-width:1005px){
+            .swiper-container {
+                height: 100%;
+            }
+        }
     </style>
 
 
@@ -756,7 +767,7 @@ gtag('config', 'UA-159861942-1');
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/miss2mrs.png " style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -783,7 +794,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/ruby1.png" style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -811,7 +822,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/apriltravels.png" style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -839,7 +850,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/saint.png" style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -867,7 +878,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/gimc.png" style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -893,7 +904,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/cakes1.png" style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -921,7 +932,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/trans.png " style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -950,7 +961,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/shortest.png" style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -977,7 +988,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/tripplegee.png " style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -1004,7 +1015,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/radiant.png " style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -1031,7 +1042,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/easieaver.png " style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -1059,7 +1070,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/femi.png " style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -1090,7 +1101,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/queen.png" style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -1116,7 +1127,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/miss2mrs.png " style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
@@ -1142,7 +1153,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__container web">
-                                <div class="portfolio__item portfolio__item--right ">
+                                <div class="portfolio__item portfolio__item--flex-img ">
                                     <img src="assets/images/premier.png " style="width: 100%; " alt=" ">
                                 </div>
                                 <div class="portfolio__item portfolio__item--flex-text">
