--- a/app/touch.html
+++ b/app/touch.html
@@ -50,13 +50,19 @@
     right: 0;
     width: 100%;
     object-fit: cover;
-    /* height: 100%; */
+    height: 100%;
             z-index: -1;
         }
         .header__container {
             background: none;
-            height: 90vh;
+            
         }
+        @media only screen and (max-width: 1130px){
+            .header__container {
+            height: 80vh;
+            
+        }
+        } 
         /* .header__map {
             display: block;
         } */
