--- a/app/about.html
+++ b/app/about.html
@@ -616,22 +616,15 @@ gtag('config', 'UA-159861942-1');
             <div class="who__hleft">
             <img class="who__circle--bg" src="assets/images/whobg3.png" alt="">
             <h3 class="who__hhero">Our History</h3>
-            <p>
-                We began as KJK Designs, a website design and development company as an enterprise in June 
-                2014. In 2015, we became incorporated as a limited liability company but began full
-                 operations as such in January 2014. Since then, KJK Africa has served over 100 clients in 
-                 different industries. We’ve built technology and designed systems that have successfully 
-                 reduced production costs, increased productivity, and revenue. <br>
-            </p>
-            <p>
-                We are persistently working towards continuous improvement
-                 and stretching our potential. At present, 
-                 we have succeeded in developing technology-based models 
-                 and tools that serve to identify our client's specific 
-                 requirements and cater to addressing them effectively and 
-                 efficiently. For the foreseeable future, we are focused on helping businesses improve their production process, 
-                foster enduring customer relationships, and revenue.     
-            </p>
+                <p>
+                KJK Africa began as KJK Designs Company, a Web Design and Development Company, which was incorporated as an enterprise in June 2014. In 2015, we became incorporated as a private limited liability company. Since incorporation, KJK Africa has served over 100 clients in different industries. We have successfully built compatible technology and designed systems that have successfully reduced production cost, increased productivity and revenue for businesses that choose to work with us.
+                </p>
+                <br>
+                <p>
+                We are persistently working towards continuous improvement and stretching our potential. At present, we have succeeded in developing technology-based models and tools that serve to identify our client's specific requirements and cater to addressing them effectively and efficiently. For the foreseeable future, we are focused on helping businesses improve their production process, foster enduring customer relationships, and revenue.
+                </p>
+                
+            
             </div>
         </div>
         </div>
