--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -1486,6 +1486,7 @@ gtag('config', 'UA-159861942-1');
 
 
         ScrollReveal({ reset: false }).reveal(".portfolio-section-item", slideInUp);
+        ScrollReveal({ reset: false }).reveal(".portfolio-section-item.fave", slideInUp);
         ScrollReveal({ reset: false }).reveal(".portfolio-section__text", slideInLeft);
         ScrollReveal({ reset: false }).reveal(".title", slideInDown);
         ScrollReveal({ reset: false }).reveal(".portfolio-section__filter-container", slideInLeft);
