--- a/app/recognition.html
+++ b/app/recognition.html
@@ -461,7 +461,7 @@
                         FMTI (Federal Ministry of Industry, Trade, and Investments, Nigeria.
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -479,7 +479,7 @@
                         Forbes Africa’s 30 under 30, youngest bright minds in 2020.
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#"target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -496,7 +496,7 @@
                         Our Founder,<span> Olajumoke Oduwole</span>, was a beneficiary of the SheLeadsAfrica Accelerator Program, Top 10 Women in Business/Entrepreneurship, 2017
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -514,7 +514,7 @@
                         on the most desirable ways to build successful business     
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -532,7 +532,7 @@
                         supported by British Council and Union Bank of Nigeria    
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -550,7 +550,7 @@
                         Top 10 Women in Business/Entrepreneurship, 2017    
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -568,7 +568,7 @@
                         <span> Olajumoke Oduwole </span> on her journey into entrepreneurship.    
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -585,7 +585,7 @@
                         Our Founder, Olajumoke Oduwole, was a beneficiary of the SheLeadsAfrica Accelerator Program, Top 10 Women in Business/Entrepreneurship, 2017     
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -603,7 +603,7 @@
                         for Top Nigerians on Forbes Africa 30 under 30, 2020     
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -621,7 +621,7 @@
                          practical ingredients for scaling their businesses.    
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -638,7 +638,7 @@
                         Top 21 Businesses out of 5,000 Business application in Africa, to represent African at the “SDA Bocconi for Africa Conference, 2018     
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -656,7 +656,7 @@
                         Our Founder, was the Chapter Lead of this Event too    
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -673,7 +673,7 @@
                         Our Founder, Olajumoke Oduwole was recently chosen as a Mentor at WIMBIZ, Woman in Business, Management and Public Service    
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -690,7 +690,7 @@
                         Our Founder, Olajumoke Oduwole was named by Naira Metric to be Top 10 Women to look out for in 2018     
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -707,7 +707,7 @@
                         Our Founder, was nominated in the Technology Category on Leadership in the Technology Sector   
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -725,7 +725,7 @@
                          Olajumoke Oduwole was also part of the African    
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -742,7 +742,7 @@
                         Our Founder, Olajumoke Oduwole spoke on Digital Transformation for SMEs in Nigeria    
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -759,7 +759,7 @@
                         Our Founder’s Journey with the Whogohost Team    
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
@@ -776,7 +776,7 @@
                         KJK Africa was Top 10 SMEs at the SEYI TINUBE Entrepreneurship Program.    
                     </p>
                     <div class="recognition__btn">
-                    <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
+                    <a href="#" target="_blank" class=" recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
                         <!-- <img src="assets/images/play-slim.png " style="height: 14%; width: 5px; font-size: 14px;" class="btn__img btn__img--small" alt=" "> VIEW -->
                         View
                     </a> 
