--- a/app/how-we-work.html
+++ b/app/how-we-work.html
@@ -737,6 +737,7 @@
 
         ScrollReveal({ reset: false }).reveal(".about-page__content", slideInTop);
         ScrollReveal({ reset: false }).reveal(".about-page__title", slideInLeft);
+        ScrollReveal({ reset: false }).reveal(".title", slideInLeft);
         ScrollReveal({ reset: false }).reveal(".item__animation", slideInLeftCustomised);
         ScrollReveal({ reset: false }).reveal(".item__animation--right", slideInLeftCustomisedRight);
         ScrollReveal({ reset: false }).reveal(".about-page__avatar", slideInUp);
