--- a/app/index.html
+++ b/app/index.html
@@ -891,7 +891,10 @@
             <div class="corouzel__container">
                 <div class="corouzel swiper-wrapper">
                     <div class="ir swiper-slide techpoint">
-                        <img src="assets/images/techpoint.png " style="width: 218px" alt=" " class=" ">
+                        <img src="assets/images/techpoint.png " style="width: 180px" alt=" " class=" ">
+                    </div>
+                    <div class="ir swiper-slide techpoint">
+                        <img src="assets/images/hybr.png " style="width: 180px" alt=" " class=" ">
                     </div>
                     <div class="ir techcabal swiper-slide">
                         <img src="assets/images/techcabal.png " alt=" " style="width: 218px" class=" ">
@@ -906,6 +909,9 @@
                         <img src="assets/images/businessday.png " style="width: 160px" class=" ">
                     </div>
                     <div class="ir swiper-slide">
+                        <img src="assets/images/pulse.png " style="width: 210px" class=" ">
+                    </div>
+                    <div class="ir swiper-slide">
                         <img src="assets/images/cnn.png " style="width: 100px" class=" ">
                     </div>
                     <div class="ir swiper-slide vc4">
@@ -914,17 +920,50 @@
                     <div class="ir swiper-slide">
                         <img src="assets/images/wia.png " style="width: 118px" class=" ">
                     </div>
+                    <div class="ir swiper-slide techpoint">
+                        <img src="assets/images/urban.png " style="width: 150px" class=" ">
+                    </div>
+                    <div class="ir swiper-slide techpoint">
+                        <img src="assets/images/Nairametrics 1.png " style="width: 150px" class=" ">
+                    </div>
                     <div class="ir swiper-slide">
                         <img src="assets/images/wita.png " style="width: 106px" class=" ">
                     </div>
                     <div class="ir swiper-slide world">
                         <img src="assets/images/world.png " style="width: 128px" class=" ">
                     </div>
+                    <div class="ir swiper-slide world">
+                        <img src="assets/images/wimbiz.png " style="width: 128px" class=" ">
+                    </div>
                     <div class="ir swiper-slide edc">
                         <img src="assets/images/edc.png " style="width: 192px" class=" ">
                     </div>
+                    <div class="ir swiper-slide edc">
+                        <img src="assets/images/bella.png" style="width: 192px" class=" ">
+                    </div>
                     <div class="ir swiper-slide sda">
                         <img src="assets/images/sda.png " style="width: 160px" class=" ">
+                    </div>
+                    <div class="ir swiper-slide connect">
+                        <img src="assets/images/connect.png " style="width: 160px" class=" ">
+                    </div>
+                    <div class="ir swiper-slide sda">
+                        <img src="assets/images/goldman.png " style="width: 140px" class=" ">
+                    </div>
+                    <div class="ir swiper-slide sda">
+                        <img src="assets/images/global.png " style="width: 140px" class=" ">
+                    </div>
+                    <div class="ir swiper-slide sda">
+                        <img src="assets/images/rise.png " style="width: 140px" class=" ">
+                    </div>
+                    <div class="ir swiper-slide sda">
+                        <img src="assets/images/ltv.png " style="width: 140px" class=" ">
+                    </div>
+                    <div class="ir swiper-slide sda">
+                        <img src="assets/images/whogohost.png " style="width: 140px" class=" ">
+                    </div>
+                    <div class="ir swiper-slide sda">
+                        <img src="assets/images/Seyi Tinubu.png " style="width: 140px" class=" ">
                     </div>
                 </div>
             </div>
