--- a/app/recognition.html
+++ b/app/recognition.html
@@ -950,8 +950,8 @@
             delay: 200
         };
 
-        ScrollReveal({ reset: false }).reveal(".work__content", slideInTop);
-        ScrollReveal({ reset: false }).reveal(".work__title", slideInLeft);
+        ScrollReveal({ reset: false }).reveal(".recognition__card", slideInTop);
+        ScrollReveal({ reset: false }).reveal(".title", slideInLeft);
         ScrollReveal({ reset: false }).reveal(".footer__title", slideInDown);
 
 
