--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -526,7 +526,7 @@ gtag('config', 'UA-159861942-1');
                 <div class="portfolio-section__text-content-container portfolio-section__text-content-container--afiaanyi">
                     <div>
                         <p style="color: white;" class="portfolio-section__text-content-sub-title">
-                            e-Commerce
+                            e-Commerce &amp; Marketplace
                         </p>
                         <h2 class="portfolio-section__text-content-title portfolio-section__text-content-title--afiaanyi">
                             AFIAANYI
