case study updates

--- a/app/index.html
+++ b/app/index.html
@@ -1121,9 +1121,9 @@
                         <a href="about.html" class="footer__link ">
                             Who we are
                         </a>
-                        <a href="how-we-work.html" class="footer__link ">
+                        <!-- <a href="how-we-work.html" class="footer__link ">
                             How we work
-                        </a>
+                        </a> -->
                         <a href="services.html" class="footer__link ">
                             Our Services
                         </a>
