--- a/app/about.html
+++ b/app/about.html
@@ -686,9 +686,9 @@ gtag('config', 'UA-159861942-1');
                         <a href="about.html" class="footer__link ">
                             Who we are
                         </a>
-                        <a href="how-we-work.html" class="footer__link ">
+                        <!-- <a href="how-we-work.html" class="footer__link ">
                             How we work
-                        </a>
+                        </a> -->
                         <a href="services.html" class="footer__link ">
                             Our Services
                         </a>
