--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,25 @@
             width: 100%;
             /* height: 300px; */
         }
+        #myvideo {
+            position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+            z-index: -1;
+        }
+        .header__container {
+            background: none;
+            
+        }
+        .video__wrapper {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../../assets/images/hero_img.jpg);
+        }
+        
     </style>
 </head>
 <!--Start of Tawk.to Script-->
@@ -694,7 +713,11 @@
             </div>
 
         </div>
-
+        <div class="video__wrapper">
+            <video  height='650px' autoplay muted loop id="myvideo" poster="assets/images/new-hero.png">
+                <source src="assets/images/VID-20200424-WA0022.mp4">
+            </video>
+        </div>
         <img src="assets/images/kjk-history-map.png " class="header__map ">
 
     </header>
@@ -1274,6 +1297,9 @@
       }
       new Glide('.glide', config).mount()
     </script>
+    <!-- <script>
+        document.getElementById('myvideo').setAttribute('poster','linear-gradient(to right, rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../../assets/images/hero_img.jpg)');
+    </script> -->
     <script src="jquery.min.js"></script>
     <script src="assets/scripts/owl.carousel.min.js"></script>
 
