--- a/app/index.html
+++ b/app/index.html
@@ -221,7 +221,7 @@
                                     </div>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header mobile-nav__list-item--header-border">
-                                    <a href="ourworks.html" class="mobile-nav__title">
+                                    <a href="portfolio.html" class="mobile-nav__title">
                                         KJK Products
                                     </a>
                                 </div>
@@ -232,7 +232,7 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="ourworks.html" target="_blank" class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             EduPortal
                                         </a>
                                     </div>
@@ -242,22 +242,22 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Travels Platform
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Marketplace
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="portfolio.html" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             Directory
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                        <a  href="https://attend.kjk.africa" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
                                             e-Attendance
                                         </a>
                                     </div>
